--- a/clusters/SJC/sjc1/flux-system/kustomization.yaml
+++ b/clusters/SJC/sjc1/flux-system/kustomization.yaml
@@ -3,3 +3,7 @@ kind: Kustomization
 resources:
 - gotk-components.yaml
 - gotk-sync.yaml
+- cluster-vars.yaml
+- cluster-blueprint.yaml
+- ../../../dc-vars
+- ../../../../global-vars
