--- a/clusters/SJC/sjc1/flux-system/kustomization.yaml
+++ b/clusters/SJC/sjc1/flux-system/kustomization.yaml
@@ -5,5 +5,5 @@ resources:
 - gotk-sync.yaml
 - cluster-vars.yaml
 - cluster-blueprint.yaml
-- ../../../dc-vars
+- ../../dc-vars
 - ../../../../global-vars
